feat: add note about things may change

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -7,7 +7,7 @@ export const description = 'The Office API'
 
 # API Documentation
 
-Everything you need to know about The Office API
+Everything you need to know about The Office API. The API is still in early development and some things may change.
 
 ## Getting started {{ anchor: false }}
 
