feat: add pagination info

--- a/src/pages/episodes.mdx
+++ b/src/pages/episodes.mdx
@@ -74,38 +74,48 @@ export const description = 'Episodes'
     </CodeGroup>
 
     ```json {{ title: 'Response' }}
-    [
-      {
-        "id": "640150f1e4cd7dc24960d959",
-        "title": "Pilot",
-        "summary": "A documentary crew arrives at the Scranton, Pennsylvania, offices of Dunder Mifflin to observe the employees and learn about modern management. Regional manager Michael Scott  tries to paint a happy picture in the face of potential downsizing from corporate. The office also gets new employee Ryan Howard as a temporary worker, while salesman Jim Halpert pranks and antagonizes fellow salesman Dwight Schrute , much to the enjoyment of receptionist Pam Beesly .",
-        "episode": "1",
-        "seriesEpisodeNumber": 1,
-        "airDate": "2005-03-24",
-        "season": {
-          "id": "640150ede4cd7dc24960d8fc",
-          "number": 1,
-          "startDate": "2005-03-24",
-          "endDate": "2005-04-26"
-        },
-        "mainCharacters": [
-          {
-            "id": "640150eee4cd7dc24960d916",
-            "name": "Dwight Schrute"
-          }
-          // ...
-        ],
-        "supportingCharacters": [],
-        "recurringCharacters": [
-          {
-            "id": "640150eee4cd7dc24960d90d",
-            "name": "Angela Martin"
-          }
-          // ...
-        ]
+    {
+      "results": [
+        {
+          "id": "640150f1e4cd7dc24960d959",
+          "title": "Pilot",
+          "summary": "A documentary crew arrives at the Scranton, Pennsylvania, offices of Dunder Mifflin to observe the employees and learn about modern management. Regional manager Michael Scott  tries to paint a happy picture in the face of potential downsizing from corporate. The office also gets new employee Ryan Howard as a temporary worker, while salesman Jim Halpert pranks and antagonizes fellow salesman Dwight Schrute , much to the enjoyment of receptionist Pam Beesly .",
+          "episode": "1",
+          "seriesEpisodeNumber": 1,
+          "airDate": "2005-03-24",
+          "season": {
+            "id": "640150ede4cd7dc24960d8fc",
+            "number": 1,
+            "startDate": "2005-03-24",
+            "endDate": "2005-04-26"
+          },
+          "mainCharacters": [
+            {
+              "id": "640150eee4cd7dc24960d916",
+              "name": "Dwight Schrute"
+            }
+            // ...
+          ],
+          "supportingCharacters": [],
+          "recurringCharacters": [
+            {
+              "id": "640150eee4cd7dc24960d90d",
+              "name": "Angela Martin"
+            }
+            // ...
+          ]
+        }
+        // ...
+      ],
+      "meta": {
+        "isFirstPage": true,
+        "isLastPage": false,
+        "currentPage": 1,
+        "previousPage": null,
+        "nextPage": 2,
+        "pageCount": 19
       }
-      // ...
-    ]
+    }
     ```
 
   </Col>
