--- a/src/pages/characters.mdx
+++ b/src/pages/characters.mdx
@@ -74,46 +74,53 @@ export const description = 'Characters'
     </CodeGroup>
 
     ```json {{ title: 'Response' }}
-    [
-      {
-        "id": "640150efe4cd7dc24960d937",
-        "name": "Michael Scott",
-        "gender": "Male",
-        "marital": "Holly Flax",
-        "job": [
-          "Regional Manager",
-          "Founder and CEO",
-        ],
-        "workplace": [
-          "Dunder Mifflin Scranton",
-          "The Michael Scott Paper Company",
-        ],
-        "firstAppearance": "Pilot",
-        "lastAppearance": "Finale",
-        "actor": "Steve Carell",
+    {
+      "results": [
+        {
+          "id": "640150efe4cd7dc24960d937",
+          "name": "Michael Scott",
+          "gender": "Male",
+          "marital": "Holly Flax",
+          "job": ["Regional Manager", "Founder and CEO"],
+          "workplace": [
+            "Dunder Mifflin Scranton",
+            "The Michael Scott Paper Company"
+          ],
+          "firstAppearance": "Pilot",
+          "lastAppearance": "Finale",
+          "actor": "Steve Carell",
 
-        // Included if `includeEpisodes` is true
-        "episodes": [
-          {
-            "type": "MAIN",
-            "id": "640150f1e4cd7dc24960d959",
-            "title": "Pilot",
-            "summary": "A documentary crew arrives at the Scranton, Pennsylvania, offices of Dunder Mifflin to observe the employees and learn about modern management. Regional manager Michael Scott  tries to paint a happy picture in the face of potential downsizing from corporate. The office also gets new employee Ryan Howard as a temporary worker, while salesman Jim Halpert pranks and antagonizes fellow salesman Dwight Schrute , much to the enjoyment of receptionist Pam Beesly .",
-            "season": {
-              "id": "640150ede4cd7dc24960d8fc",
-              "number": 1
-            },
-            "airDate": "2005-03-24",
-            "episode": "1",
-            "seriesEpisodeNumber": 1
-          },
-        ]
-      },
-      {
-        "id": "640150efe4cd7dc24960d936",
-        // ...
+          // Included if `includeEpisodes` is true
+          "episodes": [
+            {
+              "type": "MAIN",
+              "id": "640150f1e4cd7dc24960d959",
+              "title": "Pilot",
+              "summary": "A documentary crew arrives at the Scranton, Pennsylvania, offices of Dunder Mifflin to observe the employees and learn about modern management. Regional manager Michael Scott  tries to paint a happy picture in the face of potential downsizing from corporate. The office also gets new employee Ryan Howard as a temporary worker, while salesman Jim Halpert pranks and antagonizes fellow salesman Dwight Schrute , much to the enjoyment of receptionist Pam Beesly .",
+              "season": {
+                "id": "640150ede4cd7dc24960d8fc",
+                "number": 1
+              },
+              "airDate": "2005-03-24",
+              "episode": "1",
+              "seriesEpisodeNumber": 1
+            }
+          ]
+        },
+        {
+          "id": "640150efe4cd7dc24960d936"
+          // ...
+        }
+      ],
+      "meta": {
+        "isFirstPage": true,
+        "isLastPage": false,
+        "currentPage": 1,
+        "previousPage": null,
+        "nextPage": 2,
+        "pageCount": 9
       }
-    ]
+    }
     ```
 
   </Col>
