--- a/src/pages/episodes.mdx
+++ b/src/pages/episodes.mdx
@@ -67,7 +67,7 @@ export const description = 'Episodes'
     ```bash {{ title: 'cURL' }}
     curl -G https://theofficeapi.dev/api/episodes \
       -d includeCharacters=true \
-      -d season=640150ede4cd7dc24960d8fc \
+      -d season=1 \
       -d limit=10
     ```
 
@@ -77,21 +77,21 @@ export const description = 'Episodes'
     {
       "results": [
         {
-          "id": "640150f1e4cd7dc24960d959",
+          "id": 1,
           "title": "Pilot",
           "summary": "A documentary crew arrives at the Scranton, Pennsylvania, offices of Dunder Mifflin to observe the employees and learn about modern management. Regional manager Michael Scott  tries to paint a happy picture in the face of potential downsizing from corporate. The office also gets new employee Ryan Howard as a temporary worker, while salesman Jim Halpert pranks and antagonizes fellow salesman Dwight Schrute , much to the enjoyment of receptionist Pam Beesly .",
           "episode": "1",
           "seriesEpisodeNumber": 1,
           "airDate": "2005-03-24",
           "season": {
-            "id": "640150ede4cd7dc24960d8fc",
+            "id": 1,
             "number": 1,
             "startDate": "2005-03-24",
             "endDate": "2005-04-26"
           },
           "mainCharacters": [
             {
-              "id": "640150eee4cd7dc24960d916",
+              "id": 18,
               "name": "Dwight Schrute"
             }
             // ...
@@ -99,7 +99,7 @@ export const description = 'Episodes'
           "supportingCharacters": [],
           "recurringCharacters": [
             {
-              "id": "640150eee4cd7dc24960d90d",
+              "id": 3,
               "name": "Angela Martin"
             }
             // ...
